<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interests"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_may_select_upto_10_topics"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/checkBoxTechnology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/technology" />

        <CheckBox
            android:id="@+id/checkBoxSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/checkBoxMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/music" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/checkBoxArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/art" />

        <CheckBox
            android:id="@+id/checkBoxAlgorithms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/algorithms" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/checkBoxWebDevelopment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/web_development" />

        <CheckBox
            android:id="@+id/checkBoxTesting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/testing" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/checkBoxAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/ai" />

        <CheckBox
            android:id="@+id/checkBoxDataStructure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/check_style"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/data_structure" />
    </LinearLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/next" />
</LinearLayout>