<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:padding="16dp">

    <TextView
        android:id="@+id/registerTitle_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/lets_get_you"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/set_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerTitle_one"
        android:layout_marginStart="20dp"
        android:text="@string/set_up"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_person_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_border"
        android:contentDescription="@string/person_image"
        android:padding="20dp"
        android:src="@drawable/person_add" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_person_add"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/username"
        android:padding="10dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/confirmEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/confirm_email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmEmailEditText"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordEditText"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_account" />

</RelativeLayout>