<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical">

    <TextView
        style="@style/myAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        style="@style/myAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:textSize="45sp"
        android:text="@string/student" />

    <TextView
        style="@style/myAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:text="@string/let_s_start_learning"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            style="@style/content_font"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_corners_bg"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:shadowRadius="20"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            style="@style/content_font"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:background="@drawable/round_corners_bg"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:selectAllOnFocus="true"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/myAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:text="@string/need_an_account"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>